---------------------------------------------------------------------------------------------------
Version: 1.1.4
Date: ????
  Info:
    - Revert "Allow configuring transparency at startup"
---------------------------------------------------------------------------------------------------
Version: 1.1.3
Date: 2025. 05. 19
  Info:
    - Remove debug print
---------------------------------------------------------------------------------------------------
Version: 1.1.2
Date: 2025. 05. 19
  Info:
    - Added factorissimo support for newly placed elevated pipes
---------------------------------------------------------------------------------------------------
Version: 1.1.1
Date: 2025. 05. 13
  Info:
    - Fixes #40 (crash when upgrading quality)
---------------------------------------------------------------------------------------------------
Version: 1.1.0
Date: 2025. 05. 13
  Info:
    - Elevated pipe reworked icon (#39)
    - Allow configuring the max distance
    - Allow configuring transparency at startup
    - Remove floating pipes in editor mode whilst mining paused
---------------------------------------------------------------------------------------------------
Version: 1.0.0
Date: 2025. 05. 11
  Info:
    - Mod portal release
---------------------------------------------------------------------------------------------------
Version: 0.0.13
Date: 2025. 05. 06
  Info:
    - Yummy fresh sprites
    - Support bottleneck lite
    - Fix the corpse shadow
    - Hide the pipe pillar from bottleneck
    - Prepare to hand the mod over
---------------------------------------------------------------------------------------------------
Version: 0.0.12
Date: 2025. 04. 30
  Info:
    - Change status from "red, ingredients" to "green, working"
    - Trial east occluder
    - Remove imagemagik commands
    - Batch 12
    - Batch 13
    - Batch 14
    - Yeet the pipe cover layer
    - Cleanup
    - Unlock rotation since pipe covers are unused
    - Appease the furry