@@ -3,6 +3,7 @@ Version: 1.1.4
 Date: ????
   Info:
     - Revert "Allow configuring transparency at startup"
+    - Render the elevated sprites per player
 ---------------------------------------------------------------------------------------------------
 Version: 1.1.3
 Date: 2025. 05. 19
